--- a/template/board_c.ejs
+++ b/template/board_c.ejs
@@ -14,20 +14,31 @@
                     </colgroup>
                 </thead>
                 <tbody>
-                <% for( let i = 0; i < max_number; i++){%>
+                <%
+                    if(posts.length > 10)
+                        view_post = 10
+                    else
+                        view_post = posts.length
+                %>
+                <% for( let i = 0; i < view_post; i++){%>
                     <% if(posts[i].post_kategorie == "C") {%>
                         <tr>
-                            <!-- 왜 여기서 -1을 해야하는가? -->
                             <th><%= posts[i].post_kategorie%>
                             <th scope="row"><a href="/read/<%=posts[i].post_no-1%>"><%= posts[i].post_title %></a></th>
                             <th><%= posts[i].user_id%></th>
                             <th><%= posts[i].date%></th>
                             <th>0</th>
                         </tr>
-                    <%} else {%>
                     <%}%>
                 <%}%>
                 </tbody>
+                <tr>
+                    <td>
+                        <% for(var j = 0; j < max_page; j++){ %>
+                        [<a href="/page/<%= j + 1 %>"><%= j + 1 %></a>]
+                        <% } %>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
