페이지 디자인 및 footer, navbar 수정
- 회원 가입 / ID찾기 / ID결과 / PW찾기 / PW결과 디자인 추가
- 게시판 paging 사용 시 footer, navbar css 미 적용 현상 수정

--- a/template/footer.ejs
+++ b/template/footer.ejs
@@ -1,3 +1,16 @@
-    <footer class="foot">
-        Copyright 2021 Lee Hyeonho, Hong Youngki
-    </footer>
+<style>
+    .foot {
+        position: fixed;
+        display: flex;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        justify-content: space-around;
+        background-color: rgb(240, 234, 234);
+        padding: 30px;
+      }
+</style>
+
+<footer class="foot">
+    Copyright 2021 Lee Hyeonho, Hong Youngki
+</footer>
