--- a/views/findPassword.ejs
+++ b/views/findPassword.ejs
@@ -5,27 +5,36 @@
     <title>
         FindPassword
     </title>
+    <link rel="stylesheet" href="./login.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
     <center>
-        <h1>FindPassword Page</h1>
-        <table>
-            <form action="/findPasswordRst" method="POST">
-                <input id="user_id" name="user_id" type="text" placeholder="ID">
-                <br />
-                <input id="name" name="name" type="text" placeholder="name">
-                <br />
-                <input id="email" name="email" type="text" placeholder="email">
-                <br />
-                <input id="address" name="address" type="text" placeholder="address">
-                <br />
-                <button type="submit ">비밀번호 찾기</button>
-            </form>
-            <form action="/BackHome" method="POST">
-                <button type="submit">뒤로가기</button>
-            </form>
-        </table>
+        <div class="wrapper fadeInDown">
+            <div id="formContent">
+                <h1>FindPassword Page</h1>
+                <table>
+                    <form action="/findPasswordRst" method="POST">
+                        <input id="user_id" name="user_id" type="text" placeholder="ID">
+                        <br />
+                        <input id="name" name="name" type="text" placeholder="name">
+                        <br />
+                        <input id="email" name="email" type="text" placeholder="email">
+                        <br />
+                        <input id="address" name="address" type="text" placeholder="address">
+                        <br />
+                        <br />
+                        <button class="btn btn-outline-secondary" type="submit ">비밀번호 찾기</button>
+                    </form>
+                    <form action="/BackHome" method="POST">
+                        <button class="btn btn-outline-secondary" type="submit">뒤로가기</button>
+                    </form>
+                </table>
+            </div>
+        </div>
     </center>
 </body>
 
