--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -3,6 +3,11 @@
     crossorigin="anonymous"
 >
 </script>
+<style>
+    .navbar_logo {
+        color: orange;
+    }
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
