--- a/template/board_java.ejs
+++ b/template/board_java.ejs
@@ -1,3 +1,8 @@
+<style>
+    a {
+        text-decoration: none !important;
+    }
+</style>
 <center>
     <div class="row justify-content-center"">
         <div class="col-sm-8">
@@ -15,10 +20,11 @@
                 </thead>
                 <tbody>
                 <%
-                    if(posts.length > 10)
+                    page_num = posts.length
+                    if(page_num > 10)
                         view_post = 10
                     else
-                        view_post = posts.length
+                        view_post = page_num
                 %>
                 <% for( let i = 0; i < view_post; i++){%>
                     <% if(posts[i].post_kategorie == "Java") {%>
