footer 및 기타사항 개선
- footer 반투명화
- 화면 크기 축소 시 게시글 등록 버튼 아래에 footer가 위치하도록 margin 추가

--- a/template/board_c.ejs
+++ b/template/board_c.ejs
@@ -2,6 +2,9 @@
     a {
         text-decoration: none !important;
     }
+    button {
+        margin-bottom: 10%;
+    }
 </style>
 <center>
     <div class="row justify-content-center"">
