--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -33,7 +33,7 @@
             </ul>
         </div>
     </div>
-    <h5 style="margin-right: 1%; color: white;"><%= id %></h5>
+    <h5 style="margin-right:1%; color: white; text-align:center">Welcome! <%= id %></h5>
     <form class="navbar_user" action="/logout" method="POST">
         <button class="btn btn-warning" type="submit">Logout</button>
     </form>
