--- a/template/board_java.ejs
+++ b/template/board_java.ejs
@@ -2,6 +2,9 @@
     a {
         text-decoration: none !important;
     }
+    button {
+        margin-bottom: 10%;
+    }
 </style>
 <center>
     <div class="row justify-content-center"">
