--- a/template/footer.ejs
+++ b/template/footer.ejs
@@ -6,11 +6,12 @@
         right: 0;
         bottom: 0;
         justify-content: space-around;
-        background-color: rgb(240, 234, 234);
-        padding: 30px;
+        background-color: rgb(176, 181, 185);
+        padding: 20px;
+        opacity: 0.5;
       }
 </style>
 
 <footer class="foot">
-    Copyright 2021 Lee Hyeonho, Hong Youngki
+    <h5>Copyright 2021 Lee Hyeonho, Hong Youngki</h5>
 </footer>
