게시판 디자인 추가 및 개선
- 테이블 컬럼 라인에 게시판 마다 다른 색상 추가
- 페이지네이션 부트스트랩 적용 및 가운데 정렬
- 페이지네이션 [>>] 버튼 클릭 시 999였던 것을 j값으로 대체하여 url에 현재 페이지에 맞는 번호가 보이도록 수정

--- a/template/board_c.ejs
+++ b/template/board_c.ejs
@@ -5,6 +5,12 @@
     button {
         margin-bottom: 10%;
     }
+    table {
+        margin-top: 5%;
+    }
+    ul {
+        justify-content: center;
+    }
 </style>
 <center>
     <div class="row justify-content-center"">
@@ -12,7 +18,7 @@
             <table class="table" border="1">
                 <thead>
                     <colgroup>
-                    <tr>
+                    <tr class="table-warning">
                         <th scope="col" col width="10%">카테고리</th>
                         <th scope="col" col width="20%">제목</th>
                         <th scope="col" col width="10%">작성자</th>
@@ -41,20 +47,28 @@
                     <%}%>
                 <%}%>
                 </tbody>
-                <tr>
-                    <td>
-                        <%
-                            if (limit_page > 10)
-                                limit_page = 10
-                        %>
-                        [<a href="/page/<%= 1 %>"> << </a>]
-                        <% for(var j = 0; j < limit_page; j++){ %>
-                        [<a href="/page/<%= j + 1 %>"><%= j + 1 %></a>]
-                        <% } %>
-                        [<a href="/page/<%= 999 %>"> >> </a>]
-                    </td>
-                </tr>
             </table>
+            <%
+                if (limit_page > 10)
+                    limit_page = 10
+            %>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                  <li class="page-item">
+                    <a class="page-link" href="/page/<%= 1 %>" aria-label="Previous">
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                  <% for(var j = 0; j < limit_page; j++){ %>
+                  <li class="page-item"><a class="page-link" href="/page/<%= j + 1 %>"><%= j + 1 %></a></li>
+                  <% } %>
+                  <li class="page-item">
+                    <a class="page-link" href="/page/<%= j %>" aria-label="Next">
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </center>
