write 페이지 디자인 개선

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ a {
     text-decoration: none !important;
 }
 
+#write_btn {
+  margin-top: 2%;
+}
+
+.container {
+  margin-top: 2%;
+}
+
 .popover{
   display:none;
 }
