--- a/template/board_c.ejs
+++ b/template/board_c.ejs
@@ -39,7 +39,7 @@
                     <% if(posts[i].post_kategorie == "C") {%>
                         <tr>
                             <th><%= posts[i].post_kategorie%>
-                            <th scope="row"><a href="/read/<%=posts[i].post_no-1%>"><%= posts[i].post_title %></a></th>
+                            <th scope="row"><a href="/read/<%=posts[i].post_no%>"><%= posts[i].post_title %></a></th>
                             <th><%= posts[i].user_id%></th>
                             <th><%= posts[i].date%></th>
                             <th>0</th>
