--- a/template/board_writePost.ejs
+++ b/template/board_writePost.ejs
@@ -1,3 +1,4 @@
+<center>
 <div class="container">
     <div class="col-sm-7">
         <form action="/uploadPost" method="POST">
@@ -28,3 +29,4 @@
         </form>
     </div>
 </div>
+</center>
