--- a/template/footer.ejs
+++ b/template/footer.ejs
@@ -9,6 +9,7 @@
         background-color: rgb(176, 181, 185);
         padding: 20px;
         opacity: 0.5;
+        height: 60px;
       }
 </style>
 
