--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -8,10 +8,8 @@
                 <div class="body-content">
                     <div class="body-contentbox">
                         <div class="popup-tablebox">
-                            <table>
-                                <div id="advice_table">
-                                </div>
-                            </table>
+                            <div id="advice_table">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -23,20 +21,31 @@
     </div>
 </div>
 
-<dialog id="delete_Dialog">
-    게시글을 삭제하시겠습니까?
-    <menu>
-        <a class="btn btn-outline-secondary" href="/deletePost/<%=post.post_no%>">예</a>
-        <button class="btn btn-outline-secondary" id="delete_cancel" onclick="onClose()">아니오</button>
-    </menu>
-</dialog>
+
+<div class="modal fade" id="delete_Dialog" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">게시글 삭제</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                게시글을 삭제하시겠습니까?
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-outline-secondary" href="/deletePost/<%=post.post_no%>">예</a>
+                <button class="btn btn-outline-secondary" data-bs-dismiss="modal">아니오</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <div class="html_body">
     <div class="menu_group" align="right">
         <% if( id == post.user_id ) { %>
         <div class="menu_item">
-            <button class="btn btn-outline-secondary" id="show_dialog">게시글 삭제</button>
+            <button class="btn btn-outline-secondary" id="show_Modal" data-bs-toggle="modal" data-bs-target="#delete_Dialog">게시글 삭제</button>
         </div>
         <% } %>
         <div class="menu_item">
@@ -50,33 +59,35 @@
     
     <div class="row justify-content-center">
         <div class="col-sm-8">
-            <table class="table table-responsive" id="content_table" border="1">
+            <table class="table table-responsive">
                 <tr>
-                    <td colspan="4">카테고리</td>
-                    <td colspan="4"><%= post.post_kategorie %></td>
+                    <th scope='col' col width='20%'>제목</th>
+                    <td scope='col' col width='80%'><%= post.post_title %></td>
                 </tr>
                 <tr>
-                    <td colspan="4">제목</td>
-                    <td colspan="4"><%= post.post_title %></td>
+                    <th scope='col' col width='20%'>작성자</th>
+                    <td scope='col' col width='80%'><%= post.user_id %></td>
                 </tr>
                 <tr>
-                    <td colspan="4">작성자</td>
-                    <td colspan="4"><%= post.user_id %></td>
+                    <th scope='col' col width='20%'>카테고리</th>
+                    <td scope='col' col width='80%'><%= post.post_kategorie %></td>
                 </tr>
                 <tr>
-                    <td colspan="4">게시일</td>
-                    <td colspan="4"><%= post.date %></td>
+                    <th scope='col' col width='20%'>게시일</th>
+                    <td scope='col' col width='80%'><%= post.date %></td>
                 </tr>
                 <tr>
-                    <td colspan="8">소스코드</td>
+                    <th colspan="8">Source Code</th>
                 </tr>
-                <div id="line">
+            </table>
+            <table class="table" id="content_table">
+            <div id="line">
             <!-- ----------게시글 줄당 출력---------- -->
             <% for(let i = 0; i < post.post_content.length; i++){ %>
                 <tr onmouseover="this.style.background='#FFE4E1'" onmouseout="this.style.backgroundColor='#FFFFFF'">
-                    <td><%= i %></td>
-                    <td colspan="6"><pre><%= post.post_content[i] %></pre></td>
-                    <td colspan="2">
+                    <td style="display: none;"><%= i %></td>
+                    <td scope='col' col width='70%'><pre><%= post.post_content[i] %></pre></td>
+                    <td scope='col' col width='30%'>
                         <div class="btn-group" role="group" aria-label="Basic example" style="display:none;">
                             <button id="<%= 'modal-open'+i %>" type="button" class="btn btn-info">Advice 보기</button>
                             <a id="<%= 'popover'+i %>" data-html="true" href="#" data-toggle="tooltip" rel="comments"
@@ -192,19 +203,10 @@
 </script>
 
 <script>
-    var show_dialog = document.getElementById('show_dialog');
-    var dialog = document.getElementById('delete_Dialog');
-    var delete_cancel = document.getElementById('delete_cancel');
-    
-    show_dialog.addEventListener('click', function onOpen() {
-        if (typeof dialog.showModal === "function") {
-            dialog.showModal();
-        } else {
-            alert("a");
-        }
-    });
+    var show_Modal = document.getElementById('show_Modal')
+    var myModal = document.getElementById('delete_Dialog')
 
-    function onClose() {
-        dialog.close();
-    }
+    myModal.addEventListener('shown.bs.modal', function () {
+        show_dialog.focus()
+    })
 </script>
