--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ table {
     word-break:break-all;
 }
 
+.horizontal {
+  display: inline-block;
+}
+
 a {
     text-decoration: none !important;
 }
