ID/PW find result 실패 페이지
- 찾기 실패 시 null값 저장
- 페이지에서 null이면 can not find
- 페이지에서 null이 아니면 찾은 값 띄우기

--- a/views/findIDResult.ejs
+++ b/views/findIDResult.ejs
@@ -14,8 +14,11 @@
         <div class="wrapper fadeInDown">
             <div id="formContent">
                 <h1>
-                    your ID
-                    <%= Findid %>
+                    <% if(!Findid) {%>
+                        Can Not Find ID
+                    <%} else {%>
+                        Your ID <%= Findid %>
+                    <%}%>
                 </h1>
 
                 <form action="/BackHome" method="POST">
