--- a/views/findPasswordResult.ejs
+++ b/views/findPasswordResult.ejs
@@ -14,10 +14,11 @@
         <div class="wrapper fadeInDown">
             <div id="formContent">
                 <h1>
-                    your Password
-                </h1>
-                <h1>
-                    <%= passwordid %>
+                    <% if(!passwordid) {%>
+                        Can Not Find Password
+                    <%} else {%>
+                        Your Password <%= passwordid %>
+                    <%}%>
                 </h1>
 
                 <form action="/BackHome" method="POST">
